pragmaticself background fixed on mobile

--- a/assets/css/3-sections/home-pragmaticself.sass
+++ b/assets/css/3-sections/home-pragmaticself.sass
@@ -57,7 +57,7 @@ section.pragmaticself
 
 
   @media (max-width: 640px)
-
+    background-size: 100%
     a.home-pragmaticself-icon
       margin: 20px 0 0 0
 
